--- a/Blog musica Bootstrap/index.html
+++ b/Blog musica Bootstrap/index.html
@@ -7,190 +7,41 @@
     <link rel='stylesheet' href='css/bootstrap.min.css'>
     <link rel='stylesheet' href='css/estilos.css'>
     <script src='js/bootstrap.min.js'></script>
-    <title>NextU Cinema</title>
+    <title>Blog musica</title>
   </head>
-  <body class='cinema-body'>
+  <body>
+    <div class="container-fluid">
     <header>
-      <nav class='navbar navbar-inverse navbar-fixed-top affix-top'>
-        <img class='logo-img' src='img/logo.png'/>
-      </nav>
+      <div class='row'>
+        <div class='col-lg-6 col-md-6 col-sm-12'>
+          <img src='img/logo.jpg' class='logo-img'>
+        </div>
+        <div class='col-lg-6 col-md-6 col-sm-12'>
+          <div class='redes-sociales'>
+            <img src='img/facebook.png' class='logo-redes'>
+            <img src='img/twitter.png' class='logo-redes'>
+            <img src='img/instagram.png' class='logo-redes'>
+            <img src='img/linkedin.png' class='logo-redes'>
+            <img src='img/google.png' class='logo-redes'>
+          </div>
+        </div>
+      </div>
     </header>
-    <div class='container-fluid'>
-      <div class='row'>
-        <div class='jumbotron'>
-          <div class='row'>
-            <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4'></div>
-            <div class='col-xs-8 col-sm-8 col-md-8 col-lg-8 text-center'>
-              <h2 class='text-uppercase welcome-title '>Bienvenidos a</h2>
-              <img class='jumbotron-img' src='img/logo.png'/>
-              <div class='jumbotron-text'>Síguenos en nuestras <abbr title='Facebook,Twitter, Instagram'>redes sociales</abbr> para obtener información sobre los últimos estrenos del cine</div>
-              <div class='redes-sociales'>
-                <img class='img-rounded img-social' src='img/fb.png'/>
-                <img class='img-rounded img-social' src='img/ig.png'/>
-                <img class='img-rounded img-social' src='img/tt.png'/>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class='titulo-cartelera'>
-          <header class='titulo-text text-capitalize text-center'>películas en cartelera</header>
-        </div>
-      </div>
-      <div class='row movies-row'>
-        <div class='col-xs-4 col-sm-4 col-md-2 col-lg-2 text-center'>
-          <div class=row>
-            <img class='img-movies' src='img/movie_1.jpg'/>
-          </div>
-          <div class='row movie-title text-capitalize'>skull horror 3D</div>
-          <div class='row movie-title'>Sala 2</div>
-        </div>
-        <div class='col-xs-4 col-sm-4 col-md-2 col-lg-2 text-center'>
-          <div class='row movie-title'>
-            <img class='img-movies' src='img/movie_2.jpg'/>
-          </div>
-          <div class='row movie-title text-capitalize'>the car</div>
-          <div class='row movie-title'>Sala 3</div>
-        </div>
-        <div class='col-xs-4 col-sm-4 col-md-2 col-lg-2 text-center'>
-          <div class='row movie-title'>
-            <img class='img-movies' src='img/movie_7.jpg'/>
-          </div>
-          <div class='row movie-title text-capitalize'>retro movies</div>
-          <div class='row movie-title'>Sala 4</div>
-        </div>
-        <div class='col-md-2 col-lg-2 text-center right-column'>
-          <div class='row movie-title'>
-            <img class='img-movies' src='img/movie_9.jpg'/>
-          </div>
-          <div class='row movie-title text-capitalize'>a horror night</div>
-          <div class='row movie-title'>Sala 5</div>
-        </div>
-        <div class='col-md-2 col-lg-2 text-center right-column'>
-          <div class='row movie-title'>
-            <img class='img-movies' src='img/movie_5.jpg'/>
-          </div>
-          <div class='row movie-title text-capitalize'>darkness halloween</div>
-          <div class='row movie-title'>Sala 1</div>
-        </div>
-        <div class='col-md-2 col-lg-2 text-center right-column'>
-          <div class='row movie-title'>
-            <img class='img-movies' src='img/movie_6.jpg'/>
-          </div>
-          <div class='row movie-title text-capitalize'>the camera</div>
-          <div class='row movie-title'>Sala 8</div>
-        </div>
+
+    <nav class='navbar navbar-default'>      
+        <ul class='nav nav-pills nav-justified'>
+          <li><a href="#" class='contenido-nav'>Inicio</a></li>
+          <li><a href="#" class='contenido-nav'>Grupos</a></li>
+          <li><a href="#" class='contenido-nav'>Acordes</a></li>
+          <li><a href="#" class='contenido-nav'>Aprende</a></li>
+          <li><a href="#" class='contenido-nav'>Mejores artistas</a></li>
+          <li><a href="#" class='contenido-nav'>top 10</a></li>
+        </ul>
+
       </div>
 
-      <div class='row'>
-        <div class='col-lg-8 col-md-8 col-sm-12 col-xs-12 left-column titulo-cartelera'>
-          <header class='titulo-text text-capitalize text-center'>próximos estrenos</header>
-        </div>
-        <div class='col-lg-4 col-md-4 titulo-cartelera right-column'>
-          <header class='titulo-text text-capitalize text-center'>mejor calificada</header>
-        </div>
-      </div>
+    </nav>
 
-      <div class='row'>
-        <div class='col-lg-8 col-md-8 col-sm-12 col-xs-12 left-column movies-row'>
-            <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center'>
-              <div class='row movie-title'>
-                <img class='img-movies' src='img/movie_3.jpg'/>
-              </div>
-              <div class='row movie-title text-capitalize'>a wizard story</div>
-              <div class='row movie-title'>2017</div>
-            </div>
-            <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center'>
-              <div class='row movie-title'>
-                <img class='img-movies' src='img/movie_8.jpg'/>
-              </div>
-              <div class='row movie-title text-capitalize'>a horror ngiht</div>
-              <div class='row movie-title'>2018-I</div>
-            </div>
-            <div class='col-xs-4 col-sm-4 col-md-4 col-lg-4 text-center'>
-              <div class='row movie-title'>
-                <img class='img-movies' src='img/movie_4.jpg'/>
-              </div>
-              <div class='row movie-title text-capitalize'>star galaxy 3D</div>
-              <div class='row movie-title'>2018-II</div>
-            </div>
-        </div>
-        <div class='col-lg-4 col-md-4 right-column movies-row'>
-            <div class='col-md-12 col-lg-12 text-center'>
-              <div class=row>
-                <img class='img-movies' src='img/movie_1.jpg'/>
-              </div>
-              <div class='row movie-title text-capitalize'>skull horror 3D</div>
-              <div class='row movie-title'>Calificación: 10 / 10</div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class='row'>
-        <div class='col-lg-6 col-md-6 titulo-cartelera left-column right-column'>
-          <header class='titulo-text text-capitalize text-center'>servicios</header>
-        </div>
-        <div class='col-lg-6 col-md-6 col-sm-12 col-xs-12 titulo-cartelera'>
-          <header class='titulo-text text-capitalize text-center'>regístrate</header>
-        </div>
-      </div>
-      <div class='row'>
-        <div class='col-lg-6 col-md-6 movies-row left-column right-column text-justify'>
-          <p class='services-text'>En nuestro cine te ofrecemos los siguientes servicios para brindarte la mejor diversión y que disfrutes al máximo:</p>
-          <dl class='dl-horizontal'>
-            <dt class='services-text'>Salas de cine</dt>
-            <dd class='services-text'>Las mejores salas de cine con la mejor tecnología: salas 3D, 4D &amp; Vibra Sound</dd>
-          </dl>
-          <dl class='dl-horizontal'>
-            <dt class='services-text'>Juegos electrónicos</dt>
-            <dd class='services-text'>Gran variedad de juegos electrónicos que te divertiran al máximo</dd>
-          </dl>
-          <dl class='dl-horizontal'>
-            <dt class='services-text'>Restaurantes</dt>
-            <dd class='services-text'>Gran variedad de comidad y dulces para que disfrutes de algo rico antes, durante o despues de tu película.</dd>
-          </dl>
-          <h2 class='text-center text-uppercase welcome-title'>¡te esperamos!</h2>
-        </div>
-        <div class='col-lg-6 col-md-6 col-sm-12 col-xs-12 movies-row'>
-          <form class="" role="form">
-            <fieldset>
-              <div class="form-group text-center">
-                <legend>Datos Personales</legend>
-                <input type="text" name="nombre" value="Nombre" class="form-control input-element" id="nombre" placeholder="Nombre completo">
-                <input type="text" name="email" value="e-mail" class="form-control input-element" id="email" placeholder="Correo electrónico">
-                <input type="text" name="telefono" value="Telefono" class="form-control input-element" id="telefono" placeholder="Teléfono">
-                <input type="text" name="ciudad" value="Ciudad" class="form-control input-element" id="ciudad" placeholder="Ciudad">
-              </div>
-
-              <div class="form-group text-center user_data">
-                <legend>Elige tus categorías favoritas</legend>
-                <input type="checkbox" name="terror" value="Terror" id="terror">
-                  <label class="label-class" for="terror">Terror</label>
-                <input type="checkbox" name="comedia" value="Comedia" id="comedia">
-                  <label class="label-class" for="comedia">Comedia</label>
-                <input type="checkbox" name="suspenso" value="Suspenso" id="suspenso">
-                  <label class="label-class" for="suspenso">Suspenso</label>
-                <input  type="checkbox" name="accion" value="Acción" id="accion">
-                  <label class="label-class" for="accion">Accion</label>
-                <input type="checkbox" name="infantil" value="Infantil" id="infantil">
-                  <label class="label-class" for="infantil">Infantil</label>
-              </div>
-
-              <div class="text-center user_data">
-                <legend>¿Desea recibir correo de nuestro sitio?</legend>
-                <input type="radio" name="SI" value="si" id="si">
-                  <label for="si" class="label-class">Sí</label>
-                <input type="radio" name="NO" value="no" id="no">
-                  <label for="no" class="label-class">No</label>
-              </div>
-
-              <div class="text-center">
-                <button class="btn btn-primary form-control btn-save" type="button" name="button">Guardar</button>
-              </div>
-            </fieldset>
-          </form>
-        </div>
-      </div>
     </div>
   </body>
 </html>
