Finalizacion del contenido
se crea el contenido con sus respectivos post, busqueda y listas

--- a/Blog musica Bootstrap/index.html
+++ b/Blog musica Bootstrap/index.html
@@ -28,7 +28,7 @@
       </div>
     </header>
 
-    <nav class='navbar navbar-default'>      
+    <nav class='navbar navbar-default'>
         <ul class='nav nav-pills nav-justified'>
           <li><a href="#" class='contenido-nav'>Inicio</a></li>
           <li><a href="#" class='contenido-nav'>Grupos</a></li>
@@ -37,10 +37,87 @@
           <li><a href="#" class='contenido-nav'>Mejores artistas</a></li>
           <li><a href="#" class='contenido-nav'>top 10</a></li>
         </ul>
+     </nav>
+     <div class='row'>
+       <div class='col-lg-8 col-md-8 col-sm-12'>
+         <div class='row post-content'>
+           <div class='col-lg-8 col-md-8 col-sm-12'>
+             <h2>Tributo a los Guns and Roses</h2>
+             <p>
+               La historia de los Guns N’ Roses, uno de los mejores grupos de la escena musical de los 80’ y la última gran banda del hard rock, comienza en realidad en los años 70’ en el pequeño pueblo de Laffayette, Indiana, Estados Unidos. William “Bill” Bailey, un iracundo adolescente que a los cinco años cantaba en el coro de la iglesia y se destacaba por su impresionante rango vocal y un gran dominio del falsete, y que deseaba escapar a su destino de trabajador asalariado, conoció en el colegio a Jeffrey Dean Isbell, otro joven que parecía compartir sus intereses musicales.
+             </p>
+           </div>
+           <div class='col-lg-4 col-md-4 col-sm-12'>
+             <img src='img/guns.png' class='img-responsive'>
+           </div>
+         </div>
+         <div class='row post-content'>
+           <div class="col-lg-1 col-md-1 col-sm-1">
+             <img src='img/icono-comentarios.png' class="icon">
+           </div>
+           <div class='col-lg-11 col-md-11 col-sm-11'>
+             <div class="form-group">
+             <input type='text' name='comentario1' placeholder='Comentario...' class='form-control'>
+             </div>
+           </div>
+         </div>
 
-      </div>
 
-    </nav>
+         <div class='row post-content'>
+           <div class='col-lg-8 col-md-8 col-sm-12'>
+             <h2>Tributo a Metallica</h2>
+             <p>
+               Después de actuar con frecuencia en el circuito local, en 1983 el grupo grabó un primer disco en la línea del Trash Metal, Kill 'em All, en el sello independiente americano Megaforce Records. La misma casa discográfica llegó a editar el segundo registro del cuarteto: Ride the lightning. La multinacional Elektra los fichó, reeditó Ride the lightning y los promovió a nivel internacional.
+             </p>
+           </div>
+           <div class='col-lg-4 col-md-4 col-sm-12'>
+             <img src='img/metallica.png' class='img-responsive'>
+           </div>
+         </div>
+         <div class='row post-content'>
+           <div class="col-lg-1 col-md-1 col-sm-1">
+             <img src='img/icono-comentarios.png' class="icon">
+           </div>
+           <div class='col-lg-11 col-md-11 col-sm-11'>
+             <div class="form-group">
+             <input type='text' name='comentario1' placeholder='Comentario...' class='form-control'>
+             </div>
+           </div>
+         </div>
+       </div>
+
+
+       <div class='search col-lg-4 col-md-4'>
+         <div class='row'>
+           <div class='col-lg-12 col-md-12'>
+             <div class='form-group search-form'>
+               <span class='glyphicon glyphicon-search'></span>
+               <input type='text' name='buscar' id='buscar' class='form-control'>
+               <label for='buscar'>Buscar</label>
+             </div>
+           </div>
+           <div class='col-lg-12 col-md-12'>
+             <ul class='list-group'>
+               <a href="#"><li class='list-group-item'>Discos</li></a>
+               <a href="#"><li class='list-group-item'>Ventas</li></a>
+               <a href="#"><li class='list-group-item'>Artistas</li></a>
+               <a href="#"><li class='list-group-item'>Música mas escuchada</li></a>
+               <a href="#"><li class='list-group-item'>Artistas mejor valorados</li></a>
+               <a href="#"><li class='list-group-item'>Géneros</li></a>
+               <a href="#"><li class='list-group-item'>Instrumentos</li></a>
+               <a href="#"><li class='list-group-item'>¿Como tocar?</li></a>
+               <a href="#"><li class='list-group-item'>Escuela</li></a>
+               <a href="#"><li class='list-group-item'>Danza</li></a>
+               <a href="#"><li class='list-group-item'>Folclore</li></a>
+               <a href="#"><li class='list-group-item'>Baile tipico</li></a>
+             </ul>
+
+           </div>
+
+         </div>
+       </div>
+
+     </div>
 
     </div>
   </body>
