--- a/Blog musica Bootstrap/index.html
+++ b/Blog musica Bootstrap/index.html
@@ -18,11 +18,11 @@
         </div>
         <div class='col-lg-6 col-md-6 col-sm-12'>
           <div class='redes-sociales'>
-            <img src='img/facebook.png' class='logo-redes'>
-            <img src='img/twitter.png' class='logo-redes'>
-            <img src='img/instagram.png' class='logo-redes'>
-            <img src='img/linkedin.png' class='logo-redes'>
-            <img src='img/google.png' class='logo-redes'>
+            <a href='#'><img src='img/facebook.png' class='logo-redes'></a>
+            <a href='#'><img src='img/twitter.png' class='logo-redes'></a>
+            <a href='#'><img src='img/instagram.png' class='logo-redes'></a>
+            <a href='#'><img src='img/linkedin.png' class='logo-redes'></a>
+            <a href='#'><img src='img/google.png' class='logo-redes'></a>
           </div>
         </div>
       </div>
